kubernetes/apps/default/it-tools/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools-service
  labels:
    app: it-tools
spec:
  selector:
    app: it-tools
  ports:
    - name: http
      port: 80
      targetPort: 80
